# ldex-mono

./: LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SETUP.md  proposal_.md  run-basecamp.sh  run-miniapp.sh  run-sequencer.sh  setup.sh
.github/workflows/: ci.yml
cli/: Cargo.toml  README.md  build.rs  install.sh  run.sh
cli/src/: main.rs
ffi/ldex-amm-ffi/: Cargo.toml
ffi/ldex-amm-ffi/examples/: amm_program_id.rs  derive_pdas.rs  e2e_testnet.rs  price_indexer.rs  wlez_admin.rs
ffi/ldex-amm-ffi/include/: ldex_amm_ffi.h
ffi/ldex-amm-ffi/src/: lib.rs  submit.rs  wlez.rs
ffi/ldex-amm-ffi/tests/: e2e_new_pool.rs  e2e_reads.rs
mini-app/: README.md
mini-app/core/: CMakeLists.txt  flake.nix  metadata.json
mini-app/core/lib/: ldex_amm_ffi.h
mini-app/core/src/: ldex_core_interface.h  ldex_core_plugin.cpp  ldex_core_plugin.h
mini-app/tests/layer-a/: Cargo.toml  main.rs  run.sh
mini-app/ui/: Main.qml  flake.nix  metadata.json  run-miniapp.sh
mini-app/ui/tests/: run-ui-tests.sh  tst_uiwire.qml
programs/: CLAUDE.md  Cargo.toml  FORK.md  LICENSE  README.md  rustfmt.toml
programs/.github/actions/install-risc0/: action.yml
programs/.github/workflows/: ci.yml
programs/amm/: Cargo.toml
programs/amm-ui/qml/: NavBar.qml
programs/amm/core/src/: lib.rs
programs/amm/methods/: Cargo.toml
programs/amm/methods/guest/: Cargo.toml
programs/amm/src/: add.rs  add_ata.rs  lib.rs  new_definition.rs  remove.rs  swap.rs  swap_ata.rs  sync.rs  tests.rs
programs/amm_v2/: Cargo.toml
programs/amm_v2/core/: Cargo.toml
programs/amm_v2/core/src/: lib.rs
programs/amm_v2/methods/: Cargo.toml
programs/amm_v2/methods/guest/: Cargo.toml
programs/amm_v2/methods/src/: lib.rs
programs/amm_v2/src/: lib.rs
programs/artifacts/: amm-idl.json  private_swap_router-idl.json
programs/ata/methods/: Cargo.toml
programs/ata/methods/guest/: Cargo.toml
programs/integration_tests/: Cargo.toml
programs/integration_tests/tests/: amm.rs  amm_disposable_drift_free.rs  ata.rs  wlez.rs
programs/private_swap_router/: Cargo.toml
programs/private_swap_router/core/: Cargo.toml
programs/private_swap_router/core/src/: lib.rs
programs/private_swap_router/methods/: Cargo.toml
programs/private_swap_router/methods/guest/: Cargo.toml
programs/private_swap_router/src/: lib.rs
programs/stablecoin/methods/guest/: Cargo.toml
programs/stablecoin/methods/src/: lib.rs
programs/token/methods/: Cargo.toml
programs/token/methods/guest/: Cargo.toml
programs/wlez/: Cargo.toml
programs/wlez/core/: Cargo.toml
programs/wlez/core/src/: lib.rs
programs/wlez/methods/: Cargo.toml
programs/wlez/methods/guest/: Cargo.toml
programs/wlez/src/: initialize.rs  lib.rs  tests.rs  unwrap.rs  wrap.rs
psychopomp/: BUILD.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
psychopomp/Phase1-onchain/psychopomp-escrow/: README.md
psychopomp/Phase1-onchain/psychopomp-escrow-core/: Cargo.toml
psychopomp/Phase1-onchain/psychopomp-escrow-core/src/: lib.rs
psychopomp/Phase1-onchain/psychopomp-escrow-program/: Cargo.toml
psychopomp/Phase1-onchain/psychopomp-escrow-program/src/: lib.rs
psychopomp/Phase1-onchain/psychopomp-escrow/methods/: Cargo.toml
psychopomp/Phase1-onchain/psychopomp-escrow/methods/guest/: Cargo.toml
psychopomp/Phase1-onchain/psychopomp-registry/: README.md
psychopomp/Phase1-onchain/psychopomp-registry-core/: Cargo.toml
psychopomp/Phase1-onchain/psychopomp-registry-core/src/: lib.rs
psychopomp/Phase1-onchain/psychopomp-registry-program/: Cargo.toml
psychopomp/Phase1-onchain/psychopomp-registry-program/src/: lib.rs
psychopomp/Phase1-onchain/psychopomp-registry/methods/: Cargo.toml
psychopomp/Phase1-onchain/psychopomp-registry/methods/guest/: Cargo.toml
psychopomp/crates/psychopomp-attest/: Cargo.toml
psychopomp/crates/psychopomp-attest/src/: lib.rs
psychopomp/crates/psychopomp-chain/: Cargo.toml
psychopomp/crates/psychopomp-chain/examples/: image-id.rs  list-programs.rs  live-fault.rs  live-lifecycle.rs  live-register.rs  verify-deployment.rs
psychopomp/crates/psychopomp-chain/src/: lib.rs
psychopomp/crates/psychopomp-client/: Cargo.toml
psychopomp/crates/psychopomp-client/src/: discovery.rs  lib.rs  reputation.rs
psychopomp/crates/psychopomp-e2e/: Cargo.toml
psychopomp/crates/psychopomp-e2e/src/: main.rs
psychopomp/crates/psychopomp-hwclass/: Cargo.toml
psychopomp/crates/psychopomp-hwclass/src/: lib.rs
psychopomp/crates/psychopomp-prover/: Cargo.toml
psychopomp/crates/psychopomp-prover/src/: elf_cache.rs  main.rs  metrics.rs  persistence.rs  policy.rs  rate_limit.rs  server.rs  state.rs
psychopomp/crates/psychopomp-types/: Cargo.toml
psychopomp/crates/psychopomp-types/src/: hex_bytes.rs  lib.rs
psychopomp/guests/composed/: Cargo.toml
psychopomp/guests/composed-methods/: Cargo.toml
psychopomp/guests/composed-methods/src/: lib.rs
psychopomp/guests/heavy/: Cargo.toml
psychopomp/guests/heavy-methods/: Cargo.toml
psychopomp/guests/heavy-methods/src/: lib.rs
psychopomp/guests/hello/: Cargo.toml
psychopomp/guests/hello-methods/: Cargo.toml
psychopomp/guests/hello-methods/src/: lib.rs
psychopomp/scripts/: bootstrap-dev.sh  build-lez-guests.sh  bundle-for-runpod.sh  deploy-onchain.sh  e2e-all.sh  e2e-localhost.sh  run-psychopomp-sequencer.sh  run-remote-e2e.sh  runpod-bootstrap.sh  test-persistence.sh
scripts/: bootstrap.sh  ci-e2e.sh  run-amm-v2-full-test.sh  run-amm-v2-tests.sh  run-app.sh  run-mono2.sh  testnet-multinode-up.sh
