[workspace]
resolver = "2"
members = [
    "crates/psychopomp-hwclass",
    "crates/psychopomp-types",
    "crates/psychopomp-attest",
    "crates/psychopomp-client",
    "crates/psychopomp-chain",
    "crates/psychopomp-prover",
    "crates/psychopomp-e2e",
    "guests/hello-methods",
    "guests/composed-methods",
    "guests/heavy-methods",
    "Phase1-onchain/psychopomp-registry-core",
    "Phase1-onchain/psychopomp-registry-program",
    "Phase1-onchain/psychopomp-registry/methods",
    "Phase1-onchain/psychopomp-escrow-core",
    "Phase1-onchain/psychopomp-escrow-program",
    "Phase1-onchain/psychopomp-escrow/methods",
]
exclude = [
    "guests/hello",
    "guests/composed",
    "guests/heavy",
    "Phase1-onchain/psychopomp-registry/methods/guest",
    "Phase1-onchain/psychopomp-escrow/methods/guest",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Psychopomp contributors"]

[workspace.dependencies]
# Wire / serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
borsh = { version = "1", features = ["derive"] }
hex = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
x25519-dalek = { version = "2", features = ["static_secrets", "serde"] }
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"

# Transport
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"

# RISC Zero
risc0-zkvm = { version = "=3.0.5", default-features = false }
risc0-build = "=3.0.5"

# Internal
psychopomp-types  = { path = "crates/psychopomp-types" }
psychopomp-attest = { path = "crates/psychopomp-attest" }
psychopomp-client = { path = "crates/psychopomp-client" }
hello-methods     = { path = "guests/hello-methods" }
composed-methods  = { path = "guests/composed-methods" }
heavy-methods     = { path = "guests/heavy-methods" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
