[package]
name = "ldex-amm-ffi"
version = "0.1.0"
edition = "2021"
description = "C-ABI shim exposing the LDEX (fee-tier) AMM to the native ldex_core module"
license = "MIT OR Apache-2.0"

[lib]
name = "ldex_amm_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Our forked AMM core (fee-tier-aware compute_pool_pda + Instruction enum).
amm_core = { path = "../../programs/amm/core" }
# Account-A router instruction enum (RFP-literal disposable-address mode).
private_swap_router_core = { path = "../../programs/private_swap_router/core" }
# amm_v2 combined private-swap program. Replaces the
# (router + amm + 4 token::Transfer) recursive tree with
# (amm_v2 + 4 token::Transfer) for mode-2 disposable swaps —
# saves 1 env::verify (~5-10% wall-clock reduction on CPU).
# IMAGE_ID is just amm_v2's deployed ProgramId; receipts verify
# under the upstream PRIVACY_PRESERVING_CIRCUIT_ID. Official-
# testnet compatible.
amm_v2_core = { path = "../../programs/amm_v2/core" }
# ATA (RFP Func #8): deterministic (owner,mint) derivation + Create.
ata_core = { path = "../../programs/ata/core" }
# WLEZ (Wrapped LEZ): native-to-SPL wrapper so the AMM can take the gas
# token. PDA derivations + Initialize/Wrap/Unwrap submit ops.
wlez_core = { path = "../../programs/wlez/core" }
# Same rc3 source amm_core resolves nssa_core to — keeps AccountId/ProgramId
# byte-identical with the on-chain program and the wallet tx path.
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3", features = ["host"] }

# Signed-submit ops: build/sign/submit AMM PublicTransactions reusing the
# wallet's plumbing. All rc3 (== amm_core's nssa_core source) so nssa types
# interoperate. AMM ops are public txs — NO risc0 `prove` (kept lightweight).
nssa = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
wallet = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
common = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
sequencer_service_rpc = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3", features = ["client"] }
token_core = { path = "../../programs/token/core" }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
serde = "1"
# Used by the monolithic-swap host path: build the ExecutorEnv, drive
# `default_prover()`, and serialise the inner receipt with the same
# Borsh encoding nssa's `Proof::from_inner` expects on the verifier side.
risc0-zkvm = { version = "=3.0.5", default-features = false, features = ["client", "prove"] }
borsh = "1"

# Local-source overrides for nssa + wallet:
#
#   - nssa: ships the multi-IMAGE_ID accept-list change in
#     `circuit::Proof::is_valid_for` so the sequencer's verifier
#     accepts both the recursive `PRIVACY_PRESERVING_CIRCUIT_ID`
#     and the LDEX monolithic-swap IMAGE_ID.
#
#   - wallet: makes `pub mod privacy_preserving_tx;` so the FFI's
#     monolithic-swap path can use `AccountManager` directly,
#     bypass `send_privacy_preserving_tx_with_pre_check`, and feed
#     the witness into the monolithic guest's prover. The wallet's
#     CLI `amm` subcommand + `program_facades/amm.rs` are disabled
#     in this fork to avoid the `amm_core` package-name collision
#     between LDEX's amm_core and lez/programs' amm_core.
[patch."https://github.com/logos-blockchain/logos-execution-zone.git"]
# Path-relative to a `_lez` symlink that `setup.sh` creates at the repo
# root, pointing at the user's LEZ checkout. See SETUP.md.
nssa = { path = "../../_lez/nssa" }
nssa_core = { path = "../../_lez/nssa/core" }
wallet = { path = "../../_lez/wallet" }
# Pin common to local too — wallet (patched local) re-exports
# NSSATransaction from common, and if `common` is still pulled from the
# git tag we end up with two incompatible copies of the enum.
common = { path = "../../_lez/common" }
