[package]
name = "private_swap_router_program"
version = "0.1.0"
edition = "2021"

[dependencies]
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3", features = ["host"] }
private_swap_router_core = { path = "core" }
amm_core = { path = "../amm/core" }
token_core = { path = "../token/core" }
# Native LEZ ↔ WLEZ wrap/unwrap, batched into the privacy proof for
# `PrivateSwapNativeIn` / `PrivateSwapNativeOut` (see batched-native-swap.md).
wlez_core = { path = "../wlez/core" }

[dev-dependencies]
# Decode each chained call's `instruction_data` (encoded by `ChainedCall::new`
# via `risc0_zkvm::serde::to_vec`) back into its typed instruction in tests.
risc0-zkvm = { version = "=3.0.5", default-features = false }
