[package]
name = "psychopomp-escrow-program"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AccountWithMetadata bridge between psychopomp-escrow-core and the LEZ guest."

[dependencies]
psychopomp-escrow-core = { path = "../psychopomp-escrow-core" }
psychopomp-registry-core = { path = "../psychopomp-registry-core" }
psychopomp-hwclass = { path = "../../crates/psychopomp-hwclass" }
borsh.workspace = true
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3", features = ["host"] }
thiserror.workspace = true
