[package]
name = "psychopomp-registry-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "State machine for the psychopomp-registry LEZ program. Pure Rust; no nssa coupling."

[dependencies]
psychopomp-hwclass = { path = "../../crates/psychopomp-hwclass" }
borsh.workspace = true
serde.workspace = true
thiserror.workspace = true
sha2.workspace = true

[features]
default = []
# Brings in nssa_core + risc0 helpers needed to compute PDAs against deployed
# program IDs. Off by default so the LEZ guest target (which doesn't have host
# dependencies) compiles cleanly.
host = ["dep:nssa_core"]

[dependencies.nssa_core]
git = "https://github.com/logos-blockchain/logos-execution-zone.git"
tag = "v0.2.0-rc3"
features = ["host"]
optional = true
