[package]
name = "psychopomp-registry-program"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AccountWithMetadata bridge between psychopomp-registry-core and the LEZ guest."

[dependencies]
psychopomp-registry-core = { path = "../psychopomp-registry-core" }
psychopomp-hwclass = { path = "../../crates/psychopomp-hwclass" }
borsh.workspace = true
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3", features = ["host"] }
thiserror.workspace = true
