[package]
name = "psychopomp-attest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
psychopomp-types.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
rand_core.workspace = true
sha2.workspace = true
borsh.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
