[package]
name = "psychopomp-chain"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "On-chain integration for psychopomp: read registry + post escrow ops against a LEZ sequencer."

[dependencies]
psychopomp-registry-core = { path = "../../Phase1-onchain/psychopomp-registry-core", features = ["host"] }
psychopomp-escrow-core = { path = "../../Phase1-onchain/psychopomp-escrow-core", features = ["host"] }
psychopomp-hwclass = { path = "../psychopomp-hwclass" }
psychopomp-types.workspace = true

# nssa + sequencer RPC clients from the upstream LEZ tree.
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3", features = ["host"] }
nssa = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
sequencer_service_rpc = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3", features = ["client"] }
wallet = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
common = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }

borsh.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
anyhow.workspace = true

risc0-zkvm = { workspace = true, features = ["client"] }
risc0-binfmt = "=3.0.4"
risc0-zkos-v1compat = "=2.2.2"
hex.workspace = true
sha2.workspace = true

[dev-dependencies]
tempdir = "0.3"
