[package]
name = "psychopomp-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
psychopomp-types.workspace = true
psychopomp-attest.workspace = true

reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
borsh.workspace = true
hex.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures = "0.3"

x25519-dalek.workspace = true
ed25519-dalek.workspace = true
chacha20poly1305 = { workspace = true, features = ["alloc"] }
hkdf.workspace = true
sha2.workspace = true
rand.workspace = true

# We import risc0's Receipt type only for the public return type - no `prove`
# feature here, so wallet builds stay CUDA-free.
risc0-zkvm = { workspace = true, features = ["client"] }

[dev-dependencies]
tempdir = "0.3"
