[package]
name = "psychopomp-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "psychopomp-e2e"
path = "src/main.rs"

[dependencies]
psychopomp-types.workspace = true
psychopomp-attest.workspace = true
psychopomp-client.workspace = true
hello-methods.workspace = true
composed-methods.workspace = true
heavy-methods.workspace = true
borsh.workspace = true

clap = { version = "4", features = ["derive"] }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
serde_json.workspace = true
hex.workspace = true
rand.workspace = true
bincode = "1"

risc0-zkvm = { workspace = true, features = ["client"] }
