[package]
name = "psychopomp-prover"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "psychopomp-prover"
path = "src/main.rs"

[dependencies]
psychopomp-types.workspace = true
psychopomp-attest.workspace = true

clap = { version = "4", features = ["derive"] }
toml = "0.8"
axum.workspace = true
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rcgen = "0.13"
tower.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
borsh.workspace = true
bincode = "1"
hex.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

x25519-dalek.workspace = true
ed25519-dalek.workspace = true
chacha20poly1305 = { workspace = true, features = ["alloc"] }
hkdf.workspace = true
sha2.workspace = true
rand.workspace = true
rand_core.workspace = true

# The prover end actually runs RISC0. Build with `--features gpu` on the
# GPU box to enable CUDA-accelerated proving.
risc0-zkvm = { workspace = true, features = ["client", "prove"] }

[features]
default = []
gpu = ["risc0-zkvm/cuda"]
