[package]
name = "psychopomp-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
psychopomp-hwclass = { path = "../psychopomp-hwclass" }
serde.workspace = true
borsh.workspace = true
hex.workspace = true
base64.workspace = true
uuid.workspace = true
thiserror.workspace = true
sha2.workspace = true
serde_json.workspace = true
