[package]
name = "heavy-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "heavy"
path = "src/bin/heavy.rs"

[dependencies]
risc0-zkvm = { version = "=3.0.5", default-features = false, features = ["std"] }
sha2 = { version = "0.10", default-features = false }
serde = { version = "1", features = ["derive"] }

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3

[profile.dev]
opt-level = 3
