[package]
name = "hello-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "hello"
path = "src/bin/hello.rs"

[dependencies]
risc0-zkvm = { version = "=3.0.5", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3

[profile.dev]
opt-level = 3
