[package]
name = "amm-v2-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "amm_v2"
path = "src/bin/amm_v2.rs"

[dependencies]
spel-framework = { git = "https://github.com/logos-co/spel.git", rev = "6473ab4c400bc59bac8db83a286faaeafa7d1999", package = "spel-framework" }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
risc0-zkvm = { version = "=3.0.5", default-features = false }
amm_v2_core = { path = "../../core" }
amm_v2_program = { path = "../..", package = "amm_v2_program" }
amm_program = { path = "../../../amm", package = "amm_program" }
amm_core = { path = "../../../amm/core" }
ata_core = { path = "../../../ata/core" }
token_core = { path = "../../../token/core" }
wlez_core = { path = "../../../wlez/core" }
serde = { version = "1.0", features = ["derive"] }
borsh = "1.5"

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.9-risczero.0" }
