[package]
name = "private-swap-router-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "private_swap_router"
path = "src/bin/private_swap_router.rs"

[dependencies]
spel-framework = { git = "https://github.com/logos-co/spel.git", rev = "6473ab4c400bc59bac8db83a286faaeafa7d1999", package = "spel-framework" }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
risc0-zkvm = { version = "=3.0.5", default-features = false }
private_swap_router_core = { path = "../../core" }
private_swap_router_program = { path = "../..", package = "private_swap_router_program" }
amm_core = { path = "../../../amm/core" }
token_core = { path = "../../../token/core" }
serde = { version = "1.0", features = ["derive"] }
borsh = "1.5"

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.9-risczero.0" }

# Route nssa_core through the local LEZ checkout so the guest inherits its
# risc0-zkvm config (no `bonsai`); otherwise it pulls bonsai-sdk -> reqwest ->
# rustls -> ring, which fails to cross-compile to riscv32 (`-m64`). The guest
# never uses the remote prover client.
[patch."https://github.com/logos-blockchain/logos-execution-zone.git"]
nssa_core = { path = "../../../../_lez/nssa/core" }
