[package]
name = "psychopomp-escrow-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "psychopomp_escrow"
path = "src/bin/psychopomp_escrow.rs"

[dependencies]
spel-framework = { git = "https://github.com/logos-co/spel.git", rev = "6473ab4c400bc59bac8db83a286faaeafa7d1999", package = "spel-framework" }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
risc0-zkvm = { version = "=3.0.5", default-features = false }

psychopomp-escrow-core    = { path = "../../../psychopomp-escrow-core" }
psychopomp-escrow-program = { path = "../../../psychopomp-escrow-program" }
psychopomp-registry-core  = { path = "../../../psychopomp-registry-core" }
psychopomp-hwclass        = { path = "../../../../crates/psychopomp-hwclass" }

serde = { version = "1.0", features = ["derive"] }
borsh = "1.5"

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.9-risczero.0" }
